# aim-trainer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  HANDOFF.md  README.md
.claude/: settings.json
.claude/agents/: backend-engineer.md  code-reviewer.md  frontend-engineer.md  product-analyst.md  quality-analyst.md  scenario-author.md  solution-analyst.md  spec-compliance.md  test-coverage.md
.claude/hooks/: guard_architecture.py  guard_no_verify.py
.claude/rules/: backend-application.md  backend-domain.md  backend-infrastructure.md  frontend-src.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: d594e16d8286_create_gun_and_score_tables.py
backend/app/: main.py
backend/app/adapters/api/: sessions.py
backend/app/adapters/schemas/: scoring.py
backend/app/application/: dto.py  ports.py  use_cases.py
backend/app/domain/: exceptions.py  score.py  value_objects.py
backend/app/infrastructure/: clock.py  config.py  db.py  models.py  repositories.py
backend/tests/infra/: test_migrations.py  test_models.py  test_repositories.py  test_settings.py
backend/tests/step_defs/: test_app_end_to_end.py  test_scoring_api.py  test_scoring_domain.py
backend/tests/unit/: test_api_error_mapping.py  test_record_session_result.py  test_schemas.py  test_score.py  test_value_objects.py
frontend/: .prettierignore  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/lib/: clock.ts  (+11 more)
(+34 files in other folders)
